# persistent_structures

./: .isort.cfg  .mailmap  Makefile  README.md  pyproject.toml
persistent_structures/: __init__.py  fsdict.py  fsqueue.py  py.typed
tests/: test_fsdict.py  test_module.py
